--- a/.github/workflows/deploy-main-to-aws.yml
+++ b/.github/workflows/deploy-main-to-aws.yml
@@ -1,8 +1,8 @@
 name: Deploy to AWS (release)
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-20.04
