--- a/.github/workflows/deploy-main-to-aws.yml
+++ b/.github/workflows/deploy-main-to-aws.yml
@@ -21,6 +21,7 @@ jobs:
           packages:
             any::rmarkdown
             any::knitr
+            any::ggplot2
       - uses: quarto-dev/quarto-actions/setup@v2
       - name: Build
         uses: quarto-dev/quarto-actions/render@v2
